--- a/listStyle.css
+++ b/listStyle.css
@@ -18,7 +18,12 @@
     justify-content: center;
     gap: 10px;
 }
-
+.card-group{
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    gap: 20%;
+}
 @media (max-width: 767px) {
     .main-container{
         margin-top:20px;
